objects/ssot__PayGradeStep__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HourlyBasicRateAmount__c</fullName>
        <label>Hourly Basic Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HourlyOvertimeRateAmount__c</fullName>
        <label>Hourly Overtime Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Pay Grade Step Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumAnnualSalaryAmount__c</fullName>
        <label>Maximum Annual Salary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAnnualSalaryAmount__c</fullName>
        <label>Minimum Annual Salary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayGradeId__c</fullName>
        <label>Pay Grade</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366658508_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PayGradeStep_PayGradeId_map_PayGrade_rel</label>
        <referenceTo>ssot__PayGrade__dlm</referenceTo>
        <relationshipLabel>PayGradeStep_PayGradeId_map_PayGrade_rel</relationshipLabel>
        <relationshipName>rel_1727366658508_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>